css/prsm.css
/* Top level styles setting out the page elements */

:root {
	font-family: Oxygen, sans-serif;
	box-sizing: border-box;
	touch-action: none;
	/* interface colours defined here: CECAN theme */
	--header-color: #0d2644;
	--header-hover-color: lightgrey;
	--header-pressed-color: grey;
	--header-disabled-color: #a8d3f0;
	--panel-color: #404040;
	--pop-up-color: #f5f5f5;
	--pop-up-shadow-color: #c9c9c9;
	--modal-header-color: #0d2644;
	--tab-color: #dcdcdc;
	--tutorial-highlight-color: #d32f2f;
	--chat-message-header-color: #a2a2a2;
	--history-log-color: #fffde7;
	--map-title-color: #ffc107;
}
html,
body,
div,
span,
applet,
object,
iframe,
a,
img,
article,
aside,
canvas,
footer,
header,
nav,
h1,
h2,
h3,
h4,
h5,
h6,
p {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
button,
input,
select {
	font-family: Oxygen, sans-serif;
}
select {
	border-color: lightgrey;
	font-size: 12px;
}
.container {
	position: relative;
}
header {
	text-align: center;
	height: 80px;
}
main {
	height: calc(100vh - 119px);
	position: relative;
	cursor: default;
}
#net-pane {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
	visibility: hidden;
}
#underlay {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	background-color: transparent;
}
aside {
	position: fixed;
	top: 110px;
	right: 5px;
	width: 200px;
	z-index: 2000;
}
footer {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	z-index: 1000;
	display: flex;
	justify-content: space-between;
	padding: 5px;
	height: 25px;
	text-align: center;
	font-size: 14px;
	background-color: white;
	color: black;
	border-top: 1px solid lightgrey;
	user-select: none;
}
#statusBar {
	padding: 3px 20px;
	border-radius: 5px;
}
#zoomcontrol {
	padding-right: 20px;
	white-space: nowrap;
}
#zoomplus {
	cursor: zoom-in;
}
#zoomminus {
	cursor: zoom-out;
}
input[type='range'] {
	vertical-align: middle;
	width: 80px;
}
.splash {
	text-align: center;
	line-height: 150%;
}
.selectionBox {
	position: absolute;
	top: 0;
	left: 0;
	width: 0;
	height: 0;
	z-index: 100;
	background-color: rgba(0, 0, 250, 0.1);
	border: 1px blue dotted;
}
/* Add factor dialog */

#popup {
	display: none;
	width: 190px;
	height: 60px;
	position: absolute;
	z-index: 50;
	background-color: white;
	box-shadow: 2px 2px 10px 0px var(--pop-up-shadow-color);
	border: thin solid var(--pop-up-shadow-color);
	border-radius: 10%;
	padding: 30px 10px 10px 10px;
}
#popup-label {
	text-align: center;
	position: absolute;
	top: 60px;
	left: 50%;
	transform: translate(-50%, -50%);
	font-size: 20px;
	overflow-y: auto;
	overflow-x: hidden;
	outline: none;
	color: black;
	min-width: 160px;
	min-height: 50px;
	max-height: 60px;
}
#popup-operation {
	position: absolute;
	top: 3px;
	left: 5px;
	font-size: 16px;
	font-weight: bold;
	padding: 3px;
}

#popup-saveButton {
	position: absolute;
	bottom: 7px;
	right: 7px;
	font-size: 12px;
	background-color: black;
	color: white;
	border-radius: 20%;
	padding: 3px;
}
#popup-saveButton:hover {
	text-decoration: none;
	cursor: pointer;
	background-color: gray;
}
#popup-cancelButton {
	color: black;
	position: absolute;
	top: 0px;
	right: 5px;
	font-size: 20px;
}
#popup-cancelButton:hover {
	color: gray;
	text-decoration: none;
	cursor: pointer;
}
#popup table {
	width: 145px;
	table-layout: fixed;
	font-size: 14px;
	position: absolute;
	top: 90px;
}
#popup table td {
	width: 33%;
	text-align: center;
}
.input-color-container {
	position: relative;
	overflow: hidden;
	width: 30px;
	height: 30px;
	border: solid 2px lightgrey;
	border-radius: 30px;
	margin: auto;
}

/* ----------- colour picker ----------*/
.color-cache {
	display: flex;
	margin: 3px 0;
	width: 160px;
	border-top: 1px solid grey;
	border-bottom: 1px solid grey;
	border-right: 1px solid grey;
}
.cached-color {
	width: 20px;
	height: 20px;
	border-left: 1px solid grey;
}
.color-well {
	position: relative;
	overflow: hidden;
	width: 30px;
	height: 30px;
	border-radius: 30px;
	margin: auto;
	background-color: white;
}
.color-picker-container {
	display: none;
	position: absolute;
	z-index: 5000;
	border: 1px solid grey;
	background-color: lightgrey;
	border-radius: 4px;
	box-shadow: 2px 2px 5px 0 lighthrey;
}
/* ----- Top Navigation Bar ---------------------------------------------------------- */

nav {
	display: flex;
	background-color: var(--header-color);
	flex-direction: row;
	justify-content: flex-start;
	height: 70px;
	padding: 10px 0 0 20px;
}
.strapline {
	font-size: 20px;
	margin: 3px 0 0 10px;
	color: white;
	white-space: nowrap;
}
#version {
	font-size: xx-small;
	color: lightgray;
	margin-left: 10px;
}
.maptitle {
	font-size: 20px;
	margin: 5px 0 0 10px;
	color: var(--map-title-color);
	text-align: left;
}
.unsetmaptitle {
	color: lightgrey;
}
.button-wrapper {
	margin: auto 50px auto auto;
}
.buttons {
	flex-grow: 3;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}
nav button {
	border: 1px solid var(--header-color);
	border-radius: 4px;
	color: white;
	font-size: 24px;
	background-color: var(--header-color);
	margin: auto 5px;
	outline: none;
}
nav button .small-button {
	font-size: 16px;
}

nav button:hover {
	border: 1px solid black;
}

nav button:active {
	color: var(--header-hover-color);
	border: 1px solid black;
}
nav button .pressed {
	color: var(--header-pressed-color);
}
.reveal {
	display: flex !important;
}
.disabled {
	color: var(--header-disabled-color);
}
.disabled:hover,
.disabled:active {
	color: var(--header-disabled-color);
}
.right-border {
	border-right: 1px solid white;
}
.left-border {
	border-left: 1px solid white;
}
.dropdown-wrapper {
	position: relative;
	display: inline-block;
	padding-right: 5px;
	color: white;
	z-index: 2001;
}
.dropdown-content {
	display: none;
	position: absolute;
	background-color: var(--header-color);
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
	z-index: 10;
}
.dropdown-wrapper:hover .dropdown-content {
	display: block;
}
/* ... */

